BuildHughes/translation-tool/inputs/source_meta/objects/PayU_Payment_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Billing_API__c</fullName>
        <label>Billing API</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CashReceipt</fullName>
                    <default>true</default>
                    <label>Cash Receipt</label>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Baloto</fullName>
                </value>
                <value>
                    <fullName>PSE</fullName>
                </value>
                <value>
                    <fullName>SimpleLink</fullName>
                    <label>Simple Link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR_Error_Msg_Label_Name__c</fullName>
        <label>CSR Error Msg Label Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Rule_Failure__c</fullName>
        <label>Case Resolution Rule - Failure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Rule_Success__c</fullName>
        <label>Case Resolution Rule - Success</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Template__c</fullName>
        <label>Case Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Case_on_Click__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case on Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Link_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Link Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_to_CSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to CSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_AvailableForRecurringPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine which  payment type is applicable for Recurring payment.</description>
        <label>Available for Recurring Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_DefaultZipCode__c</fullName>
        <label>Hsvc_DefaultZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Height__c</fullName>
        <label>Image Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Image_Max_Height_CSS__c</fullName>
        <defaultValue>&apos;50px;&apos;</defaultValue>
        <label>Image Max Height CSS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Width__c</fullName>
        <label>Image Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Label_for_Payment_Type_Header__c</fullName>
        <label>Label for Payment Type Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Behavior_Mobile__c</fullName>
        <label>Link Behavior - Mobile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_new</fullName>
                    <default>true</default>
                    <label>New Window</label>
                </value>
                <value>
                    <fullName>_self</fullName>
                    <label>Same Window</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_Behavior__c</fullName>
        <label>Link Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_new</fullName>
                    <default>true</default>
                    <label>New Window</label>
                </value>
                <value>
                    <fullName>_self</fullName>
                    <label>Same Window</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_Button_Label__c</fullName>
        <label>Link Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Credit_Card_Identities__c</fullName>
        <label>Max Credit Card Identities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Pay_Amount_Error_Label__c</fullName>
        <label>Max Pay Amount Error Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Payment_Amount__c</fullName>
        <inlineHelpText>This is the max payment amount in the local currency</inlineHelpText>
        <label>Maximum Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Pay_Amount_Error_Label__c</fullName>
        <label>Min Pay Amount Error Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Payment_Amount__c</fullName>
        <inlineHelpText>This is the minimum payment amount in the local currency</inlineHelpText>
        <label>Minimum Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Path_to_Image__c</fullName>
        <label>Path to Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baloto</fullName>
                    <default>true</default>
                    <label>Baloto</label>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>EFECTY</fullName>
                </value>
                <value>
                    <fullName>Multicaja</fullName>
                </value>
                <value>
                    <fullName>Pago</fullName>
                    <label>Pago Efectivo</label>
                </value>
                <value>
                    <fullName>PSE</fullName>
                </value>
                <value>
                    <fullName>SimpleLink</fullName>
                    <label>Simple Link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Simple_Link__c</fullName>
        <label>Simple Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submit_Button_Label__c</fullName>
        <label>Submit Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Mobile_Button_Label__c</fullName>
        <label>Thank You Mobile Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_you_label_name__c</fullName>
        <label>Thank you label name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PayU Payment Type</label>
    <pluralLabel>PayU Payment Types</pluralLabel>
</CustomObject>